sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: ')' expected but '}' found.
			}
                        ^AlgBubbleSort3:26: error: ';' expected but '[' found.
Pour tout i dans [lgr-2,0] (parcours du plus grand au plus petit)
                 ^AlgBubbleSort3:27: error: ';' expected but '[' found.
       Pour tout j dans [0, i]
                        ^AlgBubbleSort3:28: error: ';' expected but ',' found.
          Si les cases j et j+1 doivent être inverser, le faire
                                                     ^AlgBubbleSort3:29: error: ';' expected but symbol literal found.
       Si le parcours sur les j n'a rien inversé, casser la boucle 
                                 ^